--- a/Calculator.csproj
+++ b/Calculator.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
+	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
     <StartupObject>Calculator.App</StartupObject>
     <ApplicationIcon>Images\calculator_icon.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
