--- a/Calculator.csproj
+++ b/Calculator.csproj
@@ -6,7 +6,8 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-	<RuntimeIdentifier>win-x64</RuntimeIdentifier>
+	<RuntimeIdentifiers>win-x64</RuntimeIdentifiers>
+	<SelfContained>true</SelfContained>
     <StartupObject>Calculator.App</StartupObject>
     <ApplicationIcon>Images\calculator_icon.ico</ApplicationIcon>
     <SignAssembly>False</SignAssembly>
