Add clickonce workflow and deploy script

--- a/.github/workflows/deplow-calculator.yml
+++ b/.github/workflows/deplow-calculator.yml
@@ -1,46 +1,23 @@
-name: "Deploy Calculator"
+name: Release
 
 on:
   push:
-    tags:
-      - "calculator/v*"
+    tags: [v*]
 
-env:
-  PROJECT_PATH: Calculator.csproj
-   
 jobs:
-  deploy:
+  release:
     runs-on: windows-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-  
-      - name: Install .NET Core
-        uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 9.0.x
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Restore the application
-        run: dotnet restore ${{ env.PROJECT_PATH }}
+      - name: Setup Git
+        run: |
+          git config --global url."https://user:${{ secrets.GITHUB_TOKEN }}@github".insteadOf https://github
+          git config --global user.name github-actions
+          git config --global user.email github-actions@github.com          
 
-      - name: Build the application
-        run: dotnet build ${{ env.PROJECT_PATH }} -c Release --no-restore
-
-      - name: Publish the application
-        run: dotnet publish ${{ env.PROJECT_PATH }} -c Release --self-contained -r win-x64 -p:PublishSingleFile=true --no-build
-
-      - name: Create release
-        uses: actions/create-release@v1
-        id: create_release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ github.ref }}
-
-      - name: Release
-        uses: csexton/release-asset-action@v3
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          pattern: bin/Release/net9.0-windows/win-x64/publish/*.exe
-          release-url: ${{ steps.create_release.outputs.upload_url }}
+      - name: Run release script
+        shell: pwsh
+        run: ./release.ps1
